Use new Files::writeString method in test